<resources>
    <string name="add_picture">Add picture</string>
    <string name="change_picture">Change picture</string>
    <string name="app_name">MedSpot</string>
    <string name="input_password">Password</string>
    <string name="input_username">Username</string>
    <string name="button_login">Login</string>
    <string name="button_signup">Sign up</string>
    <string name="input_first_name">First Name</string>
    <string name="input_last_name">Last Name</string>
    <string name="input_phone_number">Phone Number</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile_picture_description">profile picture</string>
    <string name="fab1_content_description">add item</string>
    <string name="fab2_content_description">filter items</string>
    <string name="nav_home">Home</string>
    <string name="nav_map">Map</string>
    <string name="nav_logout">Log Out</string>
    <string name="welcome">Welcome</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="button_collect">Rate</string>
    <string name="button_post">Post</string>
    <string name="hint_add">Choose Medical Item</string>
    <string name="hint_select">Choose Medical Item</string>
    <string name="radius_search">Radius(meters)</string>
    <string name="button_from_date">From</string>
    <string name="button_to_date">To</string>
    <string name="date">date</string>
    <string name="button_filter">Filter</string>
    <string name="rating_caption">Rate Device</string>
    <string name="submit_rating">Rate</string>
    <string name="input_description">Write Description(optional)</string>
    <string name="history">Usage History</string>
</resources>