<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/nav_home"/>

        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/baseline_map_24"
            android:title="@string/nav_map"/>

        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/baseline_medical_services_24"
            android:title="History"/>

    </group>

    <item
        android:title="">

        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/baseline_logout_24"
                android:title="@string/nav_logout"/>
        </menu>

    </item>

</menu>