<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.FiltersFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="140dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingStart="38dp"
            android:paddingEnd="36dp"
            android:showDividers="middle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.269">



            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutSpinner"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_select"
                app:startIconTint="@color/white"
                app:startIconTintMode="multiply">

                <AutoCompleteTextView
                    android:id="@+id/spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:textColor="@color/black"
                    tools:ignore="LabelFor">

                </AutoCompleteTextView>

            </com.google.android.material.textfield.TextInputLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="40dp"/>

            <EditText
                android:id="@+id/editText_search_radius"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/custom_input"
                android:hint="@string/radius_search"
                android:inputType="number"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:autofillHints="radius" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="40dp"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/button_from_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/green_button_color"
                    android:text="@string/button_from_date"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <Button
                    android:id="@+id/button_to_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/green_button_color"
                    android:text="@string/button_to_date"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editText_from_date"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:hint="@string/date"
                    android:paddingStart="12dp"
                    android:background="@android:color/transparent"
                    android:layout_weight="2"
                    android:paddingEnd="12dp"
                    android:autofillHints="date"
                    android:textColor="@color/black"
                    android:inputType="date"
                    android:gravity="start"/>


                <EditText
                    android:id="@+id/editText_to_date"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:hint="@string/date"
                    android:background="@android:color/transparent"
                    android:layout_weight="2"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"
                    android:autofillHints="date"
                    android:textColor="@color/black"
                    android:inputType="date"
                    android:gravity="end"/>

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="40dp"/>

            <Button
                android:id="@+id/button_filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/green_button_color"
                android:text="@string/button_filter" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>