<?xml version="1.0" encoding="utf-8"?>
<layout  xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".screens.LoginFragment">
    <data>
        <variable name="userViewModel" type="elfak.mosis.medspot.models.LoginAndSignupViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#d9fbff">

        <ImageView
            android:id="@+id/logo_login"
            android:layout_width="217dp"
            android:layout_height="225dp"
            android:layout_marginLeft="55dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="55dp"
            android:src="@drawable/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/input_username"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="55dp"
            android:layout_marginTop="300dp"
            android:layout_marginRight="55dp"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/custom_email_icon"
            android:drawablePadding="12dp"
            android:ems="10"
            android:hint="@string/input_username"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="#000000"
            android:afterTextChanged="@{userViewModel.onUsernameTextChanged}"/>

        <EditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="55dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="55dp"
            android:afterTextChanged="@{userViewModel.onPasswordTextChanged}"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/custom_lock_icon"
            android:drawablePadding="12dp"
            android:ems="10"
            android:hint="@string/input_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_username"
            android:textColor="#000000"/>

        <Button
            android:id="@+id/button_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/green_button_color"
            android:text="@string/button_login"
            android:layout_marginTop="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_password" />

        <Button
            android:id="@+id/button_signup"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_signup"
            android:layout_marginTop="20dp"
            android:textAllCaps="false"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_login" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>